--- a/janken_main.html
+++ b/janken_main.html
@@ -20,7 +20,7 @@
         <div class="btn_start">        
             <button id="start_btn" class="start_btn">Start</button>  
             <audio id="btn_audio">
-                <source src ="music/1_006_じゃーんけーん、ぽん.mp3" type="audio/mp3">
+                <source src ="music/01_jankenpon.mp3" type="audio/mp3">
             </audio>
             <p id="jankenpon">はじまるよ</p>
         </div>
